apps/gluetun/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gluetun
  labels:
    app.kubernetes.io/name: gluetun
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
