apps/gluetun/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gluetun
  namespace: gluetun
  labels:
    app: gluetun
spec:
  selector:
    app: gluetun
  ports:
    - name: control
      port: 8000
      targetPort: 8000
      protocol: TCP
    - name: http-proxy
      port: 8888
      targetPort: 8888
      protocol: TCP
  type: ClusterIP
